FACTO sftp extraction & ADD documentation